refactor: ProductController 테스트를 MockMvc 테스트로 변경